projects/compiler/test/typechecker/special_identifier/error_embed_no_file.abra
val x = #embed("./no-such-file")